--- a/index.html
+++ b/index.html
@@ -82,6 +82,10 @@
         padding: 0;
         line-height: 1.6;
         background-color: #ede8f5;
+        background-image: url('https://static.vecteezy.com/system/resources/previews/021/430/771/original/clean-sky-blue-gradient-background-with-text-space-editable-blurred-white-blue-illustration-for-the-backdrop-of-the-banner-poster-business-presentation-book-cover-advertisement-or-website-vector.jpg');
+        background-size: cover; /* Cover the entire page */
+        background-repeat: repeat; /* Do not repeat the image */
+        background-attachment: fixed; /* Fixed background */
     }
 
     header {
@@ -192,7 +196,7 @@
     }
 
     footer {
-        background: #333;
+        background: #3d52a0;
         color: #fff;
         text-align: center;
         padding: 1rem 0;
@@ -307,15 +311,8 @@
                 </tr>
                 <tr>
                     <td>Educational Path</td>
-                    <td>Bachelor's degree in computer engineering, electrical or electronics engineering, engineering physics or computer science.
-                        A master's or doctoral degree in a related engineering discipline may be required.
-                        Licensing by a provincial or territorial association of professional engineers is required to approve engineering drawings and reports and to practise as a Professional Engineer (P.Eng.).
-                        Engineers are eligible for registration following graduation from an accredited educational program, three or four years of supervised work experience in engineering and passing a professional practice examination.</td>
-                    <td>A bachelor's degree in electrical or electronics engineering or in an appropriate related engineering discipline is required.
-                        A master's or doctoral degree in a related engineering discipline may be required.
-                        Licensing by a provincial or territorial association of professional engineers is required to approve engineering drawings and reports and to practise as a Professional Engineer (P.Eng.).
-                        Engineers are eligible for registration following graduation from an accredited educational program, and after three or four years of supervised work experience in engineering and passing a professional practice examination.
-                        Leadership in Energy and Environmental Design (LEED) certification is offered by the Canada Green Building Council and may be required by some employers.</td>
+                    <td>Bachelor's in Computer Engineering or Computer Science</td>
+                    <td>Bachelor's in Electrical Engineering</td>
                 </tr>
                 <tr>
                     <td>Job Roles</td>
@@ -384,7 +381,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Engineering Career Comparison Hub. All rights reserved.</p>
+        <p>&copy; 2024 Engineering Career Comparison Hub by Justin Li. All rights reserved.</p>
     </footer>
 </body>
 </html>
