--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 <li><a href="#electrical-engineering">Electrical Engineering</a></li>
                 <li><a href="#comparison">Comparison</a></li>
                 <li><a href="#resources">Resources</a></li>
-                <li><a href=""https://justinnova0915.github.io/justinnova.github.io/cnc.html">Cnc Cheatsheet</a></li>
+                <li><a href="https://justinnova0915.github.io/cnc.html">Cnc Cheatsheet</a></li>
             </ul>
         </nav>
     </header>
