--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
                 <li><a href="#comparison">Comparison</a></li>
                 <li><a href="#resources">Resources</a></li>
                 <li><a href="https://justinnova0915.github.io/cnc.html">Cnc Cheatsheet</a></li>
+                <li><a href="https://justinnova0915.github.io/BPA.html">BPA</a></li>
             </ul>
         </nav>
     </header>
